--- a/quick-search.html
+++ b/quick-search.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="root"></div>
-    <iframe src="./background.html" frameborder="0"></iframe>
+    <iframe src="./background.html" frameborder="0" width="0" height="0"></iframe>
     <script src="./assets/runtime.a044b40a.js"></script>
     <script src="./assets/dictpanel.822e4acd.js"></script>
     <script src="./assets/5.81f86a6e.js"></script>
