feat:升级沙拉查词v7.3.3

--- a/audio-control.html
+++ b/audio-control.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Webpack App</title>
-    <script src="./webextensions-emulator-master/dist/core.js"></script>
+    <script src="./webextensions-emulator-master/dist/background.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="./assets/audio-control.5916743e.css" rel="stylesheet">
 </head>
@@ -12,8 +12,9 @@
 <body>
     <div id="root"></div>
     <script src="./assets/runtime.a044b40a.js"></script>
-    <script src="./assets/18.b5017835.js"></script>
-    <script src="./assets/audio-control.81d7f90c.js"></script>
+    <script src="./assets/19.eaf0fa44.js"></script>
+    <script src="./assets/audio-control.0a217933.js"></script>
+    <script src="./addon.js"></script>
 </body>
 
 </html>
