--- a/popup.html
+++ b/popup.html
@@ -12,15 +12,12 @@
 <body>
     <div id="root"></div>
     <script src="./assets/runtime.a044b40a.js"></script>
-    <script src="./assets/dictpanel.822e4acd.js"></script>
-    <script src="./assets/5.81f86a6e.js"></script>
-    <script src="./assets/19.3ec99700.js"></script>
-    <script src="./assets/1.aae3a86b.js"></script>
-    <script src="./assets/popup.902faf38.js"></script>
+    <script src="./assets/dictpanel.3aea54f4.js"></script>
+    <script src="./assets/5.8c289cf5.js"></script>
+    <script src="./assets/18.a3f37a46.js"></script>
+    <script src="./assets/1.c7c5ffd6.js"></script>
+    <script src="./assets/popup.75bf8335.js"></script>
+    <script src="./addon.js"></script>
 </body>
-<style>
-    body{
-        width:unset !important;
-    }
-</style>
+
 </html>
