--- a/quick-search.html
+++ b/quick-search.html
@@ -7,25 +7,18 @@
     <script src="./webextensions-emulator-master/dist/background.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="./assets/quick-search.681d65d2.css" rel="stylesheet">
-    <style>
-        .menuBar-Btn:nth-of-type(6),.menuBar-Btn:nth-of-type(7){
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="./refactor.css">
 </head>
 
 <body>
     <div id="root"></div>
     <script src="./assets/runtime.a044b40a.js"></script>
-    <script src="./assets/dictpanel.822e4acd.js"></script>
-    <script src="./assets/5.81f86a6e.js"></script>
-    <script src="./assets/1.aae3a86b.js"></script>
-    <script src="./assets/3.50fd9125.js"></script>
-    <script src="./assets/quick-search.19976957.js"></script>
+    <script src="./assets/dictpanel.3aea54f4.js"></script>
+    <script src="./assets/5.8c289cf5.js"></script>
+    <script src="./assets/1.c7c5ffd6.js"></script>
+    <script src="./assets/3.d0692a3d.js"></script>
+    <script src="./assets/quick-search.06ff9904.js"></script>
+    <script src="./addon.js"></script>
 </body>
-<style>
-    .dictPanel-Root{
-        width: 100% !important;
-    }
-</style>
+
 </html>
