--- a/background.html
+++ b/background.html
@@ -9,10 +9,11 @@
 
 <body>
     <script src="./assets/runtime.a044b40a.js"></script>
-    <script src="./assets/15.2f3ecacf.js"></script>
-    <script src="./assets/1.aae3a86b.js"></script>
-    <script src="./assets/3.50fd9125.js"></script>
-    <script src="./assets/background.64baba5d.js"></script>
+    <script src="./assets/15.ce10c657.js"></script>
+    <script src="./assets/1.c7c5ffd6.js"></script>
+    <script src="./assets/3.d0692a3d.js"></script>
+    <script src="./assets/background.21ede37f.js"></script>
+    <script src="./addon.js"></script>
 </body>
 
 </html>
