--- a/history.html
+++ b/history.html
@@ -7,17 +7,18 @@
     <script src="./webextensions-emulator-master/dist/background.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="./assets/antd.55b3b628.css" rel="stylesheet">
-    <link href="./assets/history.353e2631.css" rel="stylesheet">
+    <link href="./assets/history.1409c5cb.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
     <script src="./assets/runtime.a044b40a.js"></script>
-    <script src="./assets/dictpanel.822e4acd.js"></script>
-    <script src="./assets/antd.c3d5914b.js"></script>
-    <script src="./assets/1.aae3a86b.js"></script>
-    <script src="./assets/3.50fd9125.js"></script>
-    <script src="./assets/history.a2c42bf3.js"></script>
+    <script src="./assets/dictpanel.3aea54f4.js"></script>
+    <script src="./assets/antd.70e053e9.js"></script>
+    <script src="./assets/1.c7c5ffd6.js"></script>
+    <script src="./assets/3.d0692a3d.js"></script>
+    <script src="./assets/history.35b0e1f6.js"></script>
+    <script src="./addon.js"></script>
 </body>
 
 </html>
