--- a/utools.html
+++ b/utools.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="utf-8">
     <title>Webpack App</title>
-    <script src="./webextensions-emulator-master/dist/core.js"></script>
+    <!-- <script src="./webextensions-emulator-master/dist/core.js"></script> -->
     <link rel="stylesheet" href="./refactor.css">
 </head>
 
 <body>
-    <script src="./assets/runtime.a044b40a.js"></script>
+    <!-- <script src="./assets/runtime.a044b40a.js"></script>
     <script src="./assets/15.ce10c657.js"></script>
     <script src="./assets/1.c7c5ffd6.js"></script>
     <script src="./assets/3.d0692a3d.js"></script>
     <script src="./assets/background.21ede37f.js"></script>
-    <script src="./addon.js"></script>
+    <script src="./addon.js"></script> -->
 </body>
 </html>
