feat:修补资源url等

--- a/ext-saladic/popup.html
+++ b/ext-saladic/popup.html
@@ -6,17 +6,18 @@
     <title>Saladict</title>
     <script src="../webextensions-emulator-master/dist/background.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="/assets/popup.670dd919.css" rel="stylesheet">
+    <link href="./assets/popup.670dd919.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="/assets/runtime.c624e5b8.js"></script>
-    <script src="/assets/view-vendor.5dda2d4c.js"></script>
-    <script src="/assets/6.8712bd77.js"></script>
-    <script src="/assets/22.7140a0c3.js"></script>
-    <script src="/assets/7.c7828999.js"></script>
-    <script src="/assets/popup.9f54bf9a.js"></script>
+    <script src="./assets/runtime.c624e5b8.js"></script>
+    <script src="./assets/view-vendor.5dda2d4c.js"></script>
+    <script src="./assets/6.8712bd77.js"></script>
+    <script src="./assets/22.7140a0c3.js"></script>
+    <script src="./assets/7.c7828999.js"></script>
+    <script src="./assets/popup.9f54bf9a.js"></script>
+    <script src="./addon.js"></script>
 </body>
 
 </html>
