--- a/ext-saladic/history.html
+++ b/ext-saladic/history.html
@@ -6,16 +6,17 @@
     <title>Saladict</title>
     <script src="../webextensions-emulator-master/dist/background.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="/assets/history.8db84fa0.css" rel="stylesheet">
+    <link href="./assets/history.8db84fa0.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="/assets/runtime.c624e5b8.js"></script>
-    <script src="/assets/view-vendor.5dda2d4c.js"></script>
-    <script src="/assets/antd.5db8c60d.js"></script>
-    <script src="/assets/wordpage.4c5f8ebe.js"></script>
-    <script src="/assets/history.770583ab.js"></script>
+    <script src="./assets/runtime.c624e5b8.js"></script>
+    <script src="./assets/view-vendor.5dda2d4c.js"></script>
+    <script src="./assets/antd.5db8c60d.js"></script>
+    <script src="./assets/wordpage.4c5f8ebe.js"></script>
+    <script src="./assets/history.770583ab.js"></script>
+    <script src="./addon.js"></script>
 </body>
 
 </html>
