--- a/ext-saladic/options.html
+++ b/ext-saladic/options.html
@@ -6,17 +6,19 @@
     <title>Saladict</title>
     <script src="../webextensions-emulator-master/dist/background.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="/assets/options.f36d9a64.css" rel="stylesheet">
+    <link href="./assets/options.f36d9a64.css" rel="stylesheet">
+    <link href="./refactor.css" rel="stylesheet" >
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="/assets/runtime.c624e5b8.js"></script>
-    <script src="/assets/view-vendor.5dda2d4c.js"></script>
-    <script src="/assets/franc.652a73a7.js"></script>
-    <script src="/assets/dexie.3f044acc.js"></script>
-    <script src="/assets/antd.5db8c60d.js"></script>
-    <script src="/assets/options.fe276496.js"></script>
+    <script src="./assets/runtime.c624e5b8.js"></script>
+    <script src="./assets/view-vendor.5dda2d4c.js"></script>
+    <script src="./assets/franc.652a73a7.js"></script>
+    <script src="./assets/dexie.3f044acc.js"></script>
+    <script src="./assets/antd.5db8c60d.js"></script>
+    <script src="./assets/options.fe276496.js"></script>
+    <script src="./addon.js"></script>
 </body>
 
 </html>
