--- a/ext-saladic/quick-search.html
+++ b/ext-saladic/quick-search.html
@@ -6,16 +6,18 @@
     <title>Saladict</title>
     <script src="../webextensions-emulator-master/dist/background.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="/assets/quick-search.97fcb6aa.css" rel="stylesheet">
+    <link href="./assets/quick-search.97fcb6aa.css" rel="stylesheet">
+    <link href="./refactor.css" rel="stylesheet" >
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="/assets/runtime.c624e5b8.js"></script>
-    <script src="/assets/view-vendor.5dda2d4c.js"></script>
-    <script src="/assets/6.8712bd77.js"></script>
-    <script src="/assets/7.c7828999.js"></script>
-    <script src="/assets/quick-search.87aa5c43.js"></script>
+    <script src="./assets/runtime.c624e5b8.js"></script>
+    <script src="./assets/view-vendor.5dda2d4c.js"></script>
+    <script src="./assets/6.8712bd77.js"></script>
+    <script src="./assets/7.c7828999.js"></script>
+    <script src="./assets/quick-search.87aa5c43.js"></script>
+    <script src="./addon.js"></script>
 </body>
 
 </html>
